---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 01.04.2023
  Features:
    - Added a popup window after the first completion to give a hint about the auto-continue and disable popup option
  Changes:
    - Changed GUI to only display the required items for the current stage
    - Changed GUI to display the stage number
  Bugfixes:
    - Fixed a bug that caused the GUI button to not be added when a mod change occures
    - Fixed the "/resetSpaceX" command to properly reset the launch progress
    - Fixed Bob Mods compatibility when robo ports are disabled. Will use personal roboport instead
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Changes:
    - Redacted
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Changes:
    - Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Changes:
    - Version 1.1 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Changes:
    - Correction to assembly robot icon size
---------------------------------------------------------------------------------------------------
Version: 0.5.1
  Changes:
    - Russian language translation update
---------------------------------------------------------------------------------------------------
Version: 0.5.0
  Changes:
    - Version 0.18 compatibility
---------------------------------------------------------------------------------------------------
Version: 0.4.4
  Changes: