@@ -86,6 +86,7 @@ command=Command Centre
 astrometrics=Astrometrics Lab
 ftl-drive=Faster than Light Drive
 spacex-combinator=SpaceX Combinator
+spacex-combinator-stage=SpaceX Combinator (Stage Only)
 
 [item-description]
 assembly-robot=The assembly robot is designed to operate in the rigors of space.  Used in the drydock assembly component. [Place in rocket silo to launch into space]
@@ -101,10 +102,12 @@ life-support=The life support system, including oxygen, water and food recycle e
 command=The spaceship command and control centre commonly referred to as the bridge. [Place in rocket silo to launch into space]
 astrometrics=The astrometrics lab provides the celestial body calculations necessary to enable safe navigation at higher than light speeds. [Place in rocket silo to launch into space]
 ftl-drive=The piece of high tech wizardry that makes journeying amongst the stars possible. [Place in rocket silo to launch into space]
-spacex-combinator=Combinator that produces a signal carrying the required components to complete the phase of SpaceX you are currently on, plus a signal representing the phase.
+spacex-combinator=Combinator that produces a signal carrying the required components to complete the stage of SpaceX you are currently on, plus a signal representing the stage.
+spacex-combinator-stage=Combinator that produces a signal representing the stage only.
 
 [entity-name]
 spacex-combinator=SpaceX Combinator
+spacex-combinator-stage=SpaceX Combinator (Stage Only)
 
 [mod-setting-name]
 SpaceX-game-mode=SpaceX game mode
@@ -117,6 +120,7 @@ SpaceX-cheaper-fusion-reactor=SpaceX cheaper fusion reactor
 SpaceX-no-bob=No Bob's mods compatibility
 SpaceX-no-popup=Suppress Narrative Popups
 SpaceX-auto-continue=Auto-continue on
+SpaceX-split-combinator=SpaceX split combinator output (required item, stage)
 
 [mod-setting-description]
 SpaceX-game-mode=SpaceX main difficulty settings.  Classic will give a 0.14 equivalent experience, SpaceX Plus increases research cost 4x production cost 2x and requires 5x launch profile, SpaceX Extreme increases research cost 16x, production cost 16x and launches required 25x.
@@ -129,6 +133,7 @@ SpaceX-cheaper-fusion-reactor=The recipe cost of the fusion reactor component is
 SpaceX-no-bob=Bob's mods compatibility will not be used in this playthrough
 SpaceX-no-popup=If selected then the popups for the completion of the satellite network and the drydock will be suppressed.  (Good for games where you want to launch many FTL craft)
 SpaceX-auto-continue=This option will automatically select the 'Bring it on' option when the FTL space craft has been completed.  Also the popup is suppressed - use in conjucntion with the above selection to remove the popups so you can keep launching multiple FTL spacecraft without manual intervention.
+SpaceX-split-combinator=Splits the SpaceX combinator in two: One which outputs only the required item and a new combinator which outputs the special symbol S for the current stage.
 
 [SpaceX-Progress]
 satellites=-Satellites launched
