@@ -3,6 +3,10 @@ Version: 1.2.0
 Date: 01.04.2023
   Features:
     - Added a popup window after the first completion to give a hint about the auto-continue and disable popup option
+    - Added option to split combinator signal output. If enabled:
+      - Exisiting combinator will output the required item for the current
+	  stage only
+      - New combinator will output the current stage as special signal S only
   Changes:
     - Changed GUI to only display the required items for the current stage
     - Changed GUI to display the stage number
